--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,19 @@
+# CREDENCIAIS GERADA EM CLIENT AND CREDENTIALS DO LADO TRELLIX
 
-# ID DA TENNAT HELIX
-HELIX_ID=''
+# XDR - ESCOPO XDR
+HELIX_ID_XDR=''
+CLIENT_ID_XDR=''
+SECRET_XDR=''
 
-# API GERADA NO IAM
-APIKEY=''
+
+# HLX - ESCOPO HLX
+HELIX_ID_HLX=''
+CLIENT_ID_HLX=''
+SECRET_HLX=''
+
+
+# CREDENCIAIS GERADA EM IAM DO LADO FIREEYE
+
+# FIREEYE
+HELIX_ID_FIREEYE=''
+APIKEY_FIREEYE=''
